--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BRL
 Title: Beta Record Linkage
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: person("Mauricio", "Sadinle", email = "msadinle@uw.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-7092-3877"))
 Description: Implementation of the record linkage methodology proposed by Sadinle (2017) <doi:10.1080/01621459.2016.1148612>.  It handles the bipartite record linkage problem, where two duplicate-free datafiles are to be merged.
 Depends: R (>= 3.5.0)
@@ -8,7 +8,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    utils
-RoxygenNote: 7.0.2
+    stringdist
+RoxygenNote: 7.3.1
 URL: https://github.com/msadinle/BRL
 BugReports: https://github.com/msadinle/BRL/issues
