--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BRL
 Title: Beta Record Linkage
 Version: 0.1.1
-Authors@R: person("Mauricio", "Sadinle", email = "msadinle@uw.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-7092-3877"))
+Authors@R: c(person("Mauricio", "Sadinle", email = "msadinle@uw.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-7092-3877")), person("Grigorij", "Ljubownikow", email = "g.ljubownikow@auckland.ac.nz", role = c("ctb"), comment = c(ORCID = "0000-0002-0335-6286")))
 Description: Implementation of the record linkage methodology proposed by Sadinle (2017) <doi:10.1080/01621459.2016.1148612>.  It handles the bipartite record linkage problem, where two duplicate-free datafiles are to be merged.
 Depends: R (>= 3.5.0)
 License: GPL-3
@@ -9,6 +9,6 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     stringdist
-RoxygenNote: 7.3.1
-URL: https://github.com/msadinle/BRL
-BugReports: https://github.com/msadinle/BRL/issues
+RoxygenNote: 7.3.3
+URL: https://github.com/grlju/BRL
+BugReports: https://github.com/grlju/BRL/issues
